First alpha coin

--- a/foundry.toml
+++ b/foundry.toml
@@ -2,10 +2,14 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.33"
+evm_version = "cancun"
+bytecode_hash = "none"
+cbor_metadata = false
+
+ignored_warnings_from = ["node_modules", "lib"]
 
 fs_permissions = [{ access = "read", path = "out" }]
-
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
 remappings = [
     '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
